--- a/texture_test/Cargo.toml
+++ b/texture_test/Cargo.toml
@@ -21,6 +21,11 @@ pollster = "0.3"
 bytemuck = { version = "1.14", features = ["derive"] }
 cgmath = "0.18.0"
 
+[dependencies.image]
+version = "0.24"
+default-features = false
+features = ["png", "jpeg"]
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
 console_log = "1.0"
